@@ -33,6 +33,9 @@
 #define RB_VERBOSE      0x800	/* print all potentially useful info */
 #define RB_SERIAL       0x1000	/* user serial port as console */
 #define RB_CDROM        0x2000	/* use cdrom as root */
+#define RB_GDB		0x8000	/* use GDB remote debugger instead of DDB */
+#define RB_MUTE		0x10000	/* Come up with the console muted */
+#define RB_MULTIPLE	0x20000000	/* Use multiple consoles */
 
 #define RB_BOOTINFO     0x80000000	/* have `struct bootinfo *' arg */
 
